core/include/eshi/eshi.h

#define ESHI_VERSION_MAJOR 0
#define ESHI_VERSION_MINOR 1
#define ESHI_VERSION_PATCH 0
#define ESHI_ABI_VERSION              ESHI_ABI_VERSION_PACK(1, 1, 0)
#define ESHI_COMMAND_PROTOCOL_VERSION 1u
#define ESHI_EVENT_PROTOCOL_VERSION   1u
typedef enum EshiGrade {
    ESHI_GRADE_INK   = 1, 
    ESHI_GRADE_PAPER = 2, 
    ESHI_GRADE_BRUSH = 3, 
    ESHI_GRADE_GOLD  = 4  
} EshiGrade;
typedef enum EshiResult {
    ESHI_OK              =  0,
    ESHI_ERR_INVALID     = -1, 
    ESHI_ERR_UNSUPPORTED = -2, 
    ESHI_ERR_NOMEM       = -3,
    ESHI_ERR_LIMIT       = -4, 
    ESHI_ERR_STALE       = -5, 
    ESHI_ERR_VERSION     = -6  
} EshiResult;
const char* eshi_result_string(EshiResult r);
const char* eshi_grade_string(EshiGrade g);
typedef struct EshiAbiInfo {
    uint32_t struct_size;
    uint32_t abi_info_alignment;
    uint32_t abi_version;
    uint32_t command_protocol_version;
    uint32_t event_protocol_version;
    uint32_t pointer_size;
    uint32_t size_t_size;
    uint32_t function_pointer_size;
    uint32_t grade_size;
    uint32_t result_size;
    uint32_t entity_size;
    uint32_t config_size;
    uint32_t config_alignment;
    uint32_t config_width_offset;
    uint32_t config_height_offset;
    uint32_t config_grade_offset;
    uint32_t config_fixed_dt_offset;
    uint32_t config_seed_offset;
    uint32_t config_max_entities_offset;
    uint32_t transform_view_size;
    uint32_t transform_view_alignment;
    uint32_t transform_view_entity_offset;
    uint32_t transform_view_x_offset;
    uint32_t transform_view_y_offset;
    uint32_t transform_view_count_offset;
    uint32_t velocity_view_size;
    uint32_t velocity_view_alignment;
    uint32_t velocity_view_entity_offset;
    uint32_t velocity_view_vx_offset;
    uint32_t velocity_view_vy_offset;
    uint32_t velocity_view_count_offset;
    uint32_t collision_event_size;
    uint32_t collision_event_alignment;
    uint32_t collision_event_a_offset;
    uint32_t collision_event_b_offset;
    uint32_t collision_event_nx_offset;
    uint32_t collision_event_ny_offset;
    uint32_t collision_event_penetration_offset;
    uint32_t material_size;
    uint32_t material_alignment;
    uint32_t material_cpu_shader_offset;
    uint32_t material_source_path_offset;
    uint32_t material_package_path_offset;
    uint32_t material_uniform_data_offset;
    uint32_t material_uniform_size_offset;
} EshiAbiInfo;
typedef uint32_t EshiEntity;
#define ESHI_NULL_ENTITY   ((EshiEntity)0)
#define ESHI_ENTITY_INDEX_BITS       17u
#define ESHI_ENTITY_GENERATION_BITS  8u
#define ESHI_MAX_ENTITIES            ((uint32_t)0x0001FFFFu)
typedef struct EshiWorld EshiWorld;
typedef struct EshiConfig {
    int32_t   width;         
    int32_t   height;        
    EshiGrade grade;         
    float     fixed_dt;      
    uint64_t  seed;          
    uint32_t  max_entities;  
} EshiConfig;
EshiWorld* eshi_world_create(const EshiConfig* cfg);
void       eshi_world_destroy(EshiWorld* w);
EshiGrade eshi_world_grade(const EshiWorld* w);
const char* eshi_world_backend_name(const EshiWorld* w);
void      eshi_world_size(const EshiWorld* w, int32_t* out_w, int32_t* out_h);
EshiResult eshi_transform_set(EshiWorld* w, EshiEntity e, float x, float y);
EshiResult eshi_transform_get(const EshiWorld* w, EshiEntity e, float* x, float* y);
EshiResult eshi_velocity_set(EshiWorld* w, EshiEntity e, float vx, float vy);
EshiResult eshi_velocity_get(const EshiWorld* w, EshiEntity e, float* vx, float* vy);
typedef struct EshiTransformView {
    const EshiEntity* entity;
    float*            x;
    float*            y;
    int32_t           count;
} EshiTransformView;
typedef struct EshiVelocityView {
    const EshiEntity* entity;
    float*            vx;
    float*            vy;
    int32_t           count;
} EshiVelocityView;
EshiTransformView eshi_view_transforms(EshiWorld* w);
EshiVelocityView  eshi_view_velocities(EshiWorld* w);
typedef void (*EshiSystemFn)(EshiWorld* w, float dt, void* user);
#define ESHI_ORDER_INPUT      (-1000)
#define ESHI_ORDER_GAMEPLAY   (0)
#define ESHI_ORDER_MOTION     (1000)   
#define ESHI_ORDER_COLLISION  (2000)   
#define ESHI_ORDER_PRESENT    (3000)   
EshiResult eshi_system_add(EshiWorld* w, const char* name, int32_t order,
                           EshiSystemFn fn, void* user);
typedef enum EshiKey {
    ESHI_KEY_UP = 0,
    ESHI_KEY_DOWN,
    ESHI_KEY_LEFT,
    ESHI_KEY_RIGHT,
    ESHI_KEY_W,
    ESHI_KEY_A,
    ESHI_KEY_S,
    ESHI_KEY_D,
    ESHI_KEY_SPACE,
    ESHI_KEY_ESCAPE,
    ESHI_KEY_COUNT
} EshiKey;
void eshi_input_set_key(EshiWorld* w, EshiKey key, int down);
int  eshi_input_down(const EshiWorld* w, EshiKey key);
int  eshi_input_pressed(const EshiWorld* w, EshiKey key);   
int  eshi_input_released(const EshiWorld* w, EshiKey key);  
#define ESHI_MAX_WIRE_PAYLOAD_WORDS  0xFFFFu
#define ESHI_MAX_SHARED_BUFFER_WORDS (1u << 24) 
EshiEntity eshi_scene_entity(const EshiWorld* w, uint32_t key);
uint32_t eshi_scene_epoch(const EshiWorld* w);
uint32_t eshi_scene_node_count(const EshiWorld* w);
void eshi_scene_clear(EshiWorld* w);
typedef void (*EshiShaderFn)(float* out_rgba,
                             float frag_x, float frag_y,
                             float res_x, float res_y,
                             float time,
                             const void* uniforms);
typedef struct EshiMaterial {
    EshiShaderFn cpu_shader;   
    const char*  source_path;  
    const char*  package_path; 
    void*        uniform_data; 
    size_t       uniform_size; 
} EshiMaterial;
EshiResult eshi_material_set(EshiWorld* w, const EshiMaterial* material);
int eshi_grade_available(EshiGrade grade);
EshiGrade eshi_grade_best(void);
typedef void* (*EshiGlProcLoader)(const char* name);
void eshi_gl_set_proc_loader(EshiGlProcLoader loader);
void eshi_tick(EshiWorld* w, float dt);
EshiResult eshi_render(EshiWorld* w, uint8_t* pixels, int32_t stride, float time);
uint64_t eshi_frame_index(const EshiWorld* w);
double   eshi_sim_time(const EshiWorld* w);
uint32_t eshi_random_u32(EshiWorld* w);
float    eshi_random_float(EshiWorld* w); 
float    eshi_random_range(EshiWorld* w, float lo, float hi);