bindings/dart/larimar/lib/src/generated/larimar_bindings_generated.dart


@ffi.Native<ffi.Uint64 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_frame_index(ffi.Pointer<EshiWorld> w);

@ffi.Native<ffi.Void Function(EshiGlProcLoader)>()
external void eshi_gl_set_proc_loader(EshiGlProcLoader loader);

/// Reports whether a grade is compiled into this binary and usable right now.
///
/// Hosts probe with this and pick; eshi_world_create() never silently downgrades
/// a caller who asked for hardware they expected to have.
///
/// Paper (OpenGL) additionally requires eshi_gl_set_proc_loader() to have been
/// called and a context to be current, so this returns 0 for Paper until then.
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>(symbol: 'eshi_grade_available')
external int _eshi_grade_available(int grade);

int eshi_grade_available(EshiGrade grade) {
  return _eshi_grade_available(grade.value);
}

/// Highest grade available in this binary, or ESHI_GRADE_INK.
@ffi.Native<ffi.UnsignedInt Function()>(symbol: 'eshi_grade_best')
external int _eshi_grade_best();

EshiGrade eshi_grade_best() {
  return EshiGrade.fromValue(_eshi_grade_best());
}

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.UnsignedInt)>(
  symbol: 'eshi_grade_string',
)
external ffi.Pointer<ffi.Char> _eshi_grade_string(int g);

ffi.Pointer<ffi.Char> eshi_grade_string(EshiGrade g) {
  return _eshi_grade_string(g.value);
}

@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.UnsignedInt)>(
  symbol: 'eshi_input_down',
)
external int _eshi_input_down(ffi.Pointer<EshiWorld> w, int key);

int eshi_input_down(ffi.Pointer<EshiWorld> w, EshiKey key) {
  return _eshi_input_down(w, key.value);
}

@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.UnsignedInt)>(
  symbol: 'eshi_input_pressed',
)
external int _eshi_input_pressed(ffi.Pointer<EshiWorld> w, int key);

int eshi_input_pressed(ffi.Pointer<EshiWorld> w, EshiKey key) {
  return _eshi_input_pressed(w, key.value);
}

@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.UnsignedInt)>(
  symbol: 'eshi_input_released',
)
external int _eshi_input_released(ffi.Pointer<EshiWorld> w, int key);

int eshi_input_released(ffi.Pointer<EshiWorld> w, EshiKey key) {
  return _eshi_input_released(w, key.value);
}

@ffi.Native<
  ffi.Void Function(ffi.Pointer<EshiWorld>, ffi.UnsignedInt, ffi.Int)
>(symbol: 'eshi_input_set_key')
external void _eshi_input_set_key(ffi.Pointer<EshiWorld> w, int key, int down);

void eshi_input_set_key(ffi.Pointer<EshiWorld> w, EshiKey key, int down) {
  return _eshi_input_set_key(w, key.value, down);
}

/// Binds the fullscreen material.
///
/// `uniform_data` stays owned by the caller and must outlive the world. It is
/// read once per frame at render time, so a system at ESHI_ORDER_PRESENT can
/// repack it from component arrays each tick. On the GPU tiers the block is
/// uploaded as a flat float array named `eshi_uniforms`.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.Pointer<EshiMaterial>)
>(symbol: 'eshi_material_set')
external int _eshi_material_set(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<EshiMaterial> material,
);

EshiResult eshi_material_set(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<EshiMaterial> material,
) {
  return EshiResult.fromValue(_eshi_material_set(w, material));
}

@ffi.Native<ffi.Float Function(ffi.Pointer<EshiWorld>)>()
external double eshi_random_float(ffi.Pointer<EshiWorld> w);

@ffi.Native<ffi.Float Function(ffi.Pointer<EshiWorld>, ffi.Float, ffi.Float)>()
external double eshi_random_range(
  ffi.Pointer<EshiWorld> w,
  double lo,
  double hi,
);

/// ===========================================================================
/// Deterministic RNG
///
/// Seeded per world. Systems must draw from here rather than rand() or a
/// wall-clock, or headless renders stop being reproducible.
/// ==========================================================================
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_random_u32(ffi.Pointer<EshiWorld> w);

/// Renders one frame into a host-provided buffer.
///
/// @param pixels  RGBA8, at least height*stride bytes.
/// @param stride  Bytes per row.
/// @param time    Seconds handed to the shader.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Float,
  )
>(symbol: 'eshi_render')
external int _eshi_render(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Uint8> pixels,
  int stride,
  double time,
);

EshiResult eshi_render(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Uint8> pixels,
  int stride,
  double time,
) {
  return EshiResult.fromValue(_eshi_render(w, pixels, stride, time));
}

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int)>(
  symbol: 'eshi_result_string',
)
external ffi.Pointer<ffi.Char> _eshi_result_string(int r);

ffi.Pointer<ffi.Char> eshi_result_string(EshiResult r) {
  return _eshi_result_string(r.value);
}

/// Destroys every reconciled entity and forgets every key.
///
/// The epoch is deliberately *not* rewound: unmounting a scene must not reopen
/// the gate to a stale writer that is still holding a buffer.
@ffi.Native<ffi.Void Function(ffi.Pointer<EshiWorld>)>()
external void eshi_scene_clear(ffi.Pointer<EshiWorld> w);

/// The entity reconciled for `key`, or ESHI_NULL_ENTITY if there is none.
@ffi.Native<EshiEntity Function(ffi.Pointer<EshiWorld>, ffi.Uint32)>()
external int eshi_scene_entity(ffi.Pointer<EshiWorld> w, int key);

/// Highest scene epoch this world has accepted.
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_scene_epoch(ffi.Pointer<EshiWorld> w);

/// Nodes currently retained by the reconciler.
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_scene_node_count(ffi.Pointer<EshiWorld> w);

@ffi.Native<ffi.Double Function(ffi.Pointer<EshiWorld>)>()
external double eshi_sim_time(ffi.Pointer<EshiWorld> w);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    EshiSystemFn,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'eshi_system_add')
external int _eshi_system_add(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Char> name,
  int order,
  EshiSystemFn fn,
  ffi.Pointer<ffi.Void> user,
);

EshiResult eshi_system_add(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Char> name,
  int order,
  EshiSystemFn fn,
  ffi.Pointer<ffi.Void> user,
) {
  return EshiResult.fromValue(_eshi_system_add(w, name, order, fn, user));
}

/// Advances the simulation.
///
/// `dt` is accumulated and consumed in fixed steps of config.fixed_dt, so the
/// number of system executions depends only on elapsed simulated time and never
/// on frame rate. Pass exactly fixed_dt from a headless renderer to make the
/// output byte-reproducible.
@ffi.Native<ffi.Void Function(ffi.Pointer<EshiWorld>, ffi.Float)>()
external void eshi_tick(ffi.Pointer<EshiWorld> w, double dt);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    EshiEntity,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>(symbol: 'eshi_transform_get')
external int _eshi_transform_get(
  ffi.Pointer<EshiWorld> w,
  int e,
  ffi.Pointer<ffi.Float> x,
  ffi.Pointer<ffi.Float> y,
);

EshiResult eshi_transform_get(
  ffi.Pointer<EshiWorld> w,
  DartEshiEntity e,
  ffi.Pointer<ffi.Float> x,
  ffi.Pointer<ffi.Float> y,
) {
  return EshiResult.fromValue(_eshi_transform_get(w, e, x, y));
}

/// Position in world units. Scale is the collider-independent visual size.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<EshiWorld>, EshiEntity, ffi.Float, ffi.Float)
>(symbol: 'eshi_transform_set')
external int _eshi_transform_set(
  ffi.Pointer<EshiWorld> w,
  int e,
  double x,
  double y,
);

EshiResult eshi_transform_set(
  ffi.Pointer<EshiWorld> w,
  DartEshiEntity e,
  double x,
  double y,
) {
  return EshiResult.fromValue(_eshi_transform_set(w, e, x, y));
}

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    EshiEntity,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>(symbol: 'eshi_velocity_get')
external int _eshi_velocity_get(
  ffi.Pointer<EshiWorld> w,
  int e,
  ffi.Pointer<ffi.Float> vx,
  ffi.Pointer<ffi.Float> vy,
);

EshiResult eshi_velocity_get(
  ffi.Pointer<EshiWorld> w,
  DartEshiEntity e,
  ffi.Pointer<ffi.Float> vx,
  ffi.Pointer<ffi.Float> vy,
) {
  return EshiResult.fromValue(_eshi_velocity_get(w, e, vx, vy));
}

/// Linear velocity in world units per second. Integrated by the motion system.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<EshiWorld>, EshiEntity, ffi.Float, ffi.Float)
>(symbol: 'eshi_velocity_set')
external int _eshi_velocity_set(
  ffi.Pointer<EshiWorld> w,
  int e,
  double vx,
  double vy,
);

EshiResult eshi_velocity_set(
  ffi.Pointer<EshiWorld> w,
  DartEshiEntity e,
  double vx,
  double vy,
) {
  return EshiResult.fromValue(_eshi_velocity_set(w, e, vx, vy));
}

@ffi.Native<EshiTransformView Function(ffi.Pointer<EshiWorld>)>()
external EshiTransformView eshi_view_transforms(ffi.Pointer<EshiWorld> w);

@ffi.Native<EshiVelocityView Function(ffi.Pointer<EshiWorld>)>()
external EshiVelocityView eshi_view_velocities(ffi.Pointer<EshiWorld> w);

/// Human-readable implementation selected for this world (for diagnostics).
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<EshiWorld>)>()
external ffi.Pointer<ffi.Char> eshi_world_backend_name(
  ffi.Pointer<EshiWorld> w,
);

@ffi.Native<ffi.Pointer<EshiWorld> Function(ffi.Pointer<EshiConfig>)>()
external ffi.Pointer<EshiWorld> eshi_world_create(ffi.Pointer<EshiConfig> cfg);

@ffi.Native<ffi.Void Function(ffi.Pointer<EshiWorld>)>()
external void eshi_world_destroy(ffi.Pointer<EshiWorld> w);

@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<EshiWorld>)>(
  symbol: 'eshi_world_grade',
)
external int _eshi_world_grade(ffi.Pointer<EshiWorld> w);

EshiGrade eshi_world_grade(ffi.Pointer<EshiWorld> w) {
  return EshiGrade.fromValue(_eshi_world_grade(w));
}

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<EshiWorld>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
  )
>()
external void eshi_world_size(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Int32> out_w,
  ffi.Pointer<ffi.Int32> out_h,
);

const int ESHI_ABI_VERSION = 16842752;

const int ESHI_COMMAND_PROTOCOL_VERSION = 1;

const int ESHI_ENTITY_GENERATION_BITS = 8;

const int ESHI_ENTITY_INDEX_BITS = 17;

const int ESHI_EVENT_PROTOCOL_VERSION = 1;

const int ESHI_MAX_ENTITIES = 131071;

const int ESHI_MAX_SHARED_BUFFER_WORDS = 16777216;

const int ESHI_MAX_WIRE_PAYLOAD_WORDS = 65535;

const int ESHI_NULL_ENTITY = 0;

const int ESHI_ORDER_COLLISION = 2000;

const int ESHI_ORDER_GAMEPLAY = 0;

const int ESHI_ORDER_INPUT = -1000;

const int ESHI_ORDER_MOTION = 1000;

const int ESHI_ORDER_PRESENT = 3000;

const int ESHI_VERSION_MAJOR = 0;

const int ESHI_VERSION_MINOR = 1;

const int ESHI_VERSION_PATCH = 0;

/// ===========================================================================
/// Native contract discovery
///
/// EshiAbiInfo is append-only for an ABI major version. Every field is a u32 so
/// even a binding generator that cannot model platform alignment can inspect it
/// before touching one of the pointer-bearing public structures below.
/// ==========================================================================
final class EshiAbiInfo extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_info_alignment;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint32()
  external int command_protocol_version;

  @ffi.Uint32()
  external int event_protocol_version;

  @ffi.Uint32()
  external int pointer_size;

  @ffi.Uint32()
  external int size_t_size;

  @ffi.Uint32()
  external int function_pointer_size;

  @ffi.Uint32()
  external int grade_size;

  @ffi.Uint32()
  external int result_size;

  @ffi.Uint32()
  external int entity_size;

  @ffi.Uint32()
  external int config_size;

  @ffi.Uint32()
  external int config_alignment;

  @ffi.Uint32()
  external int config_width_offset;
